HTML: Fix alignment and a11y of sidebar / nav menu

--- a/gcampus/core/static_src/styles/_sidebar.scss
+++ b/gcampus/core/static_src/styles/_sidebar.scss
@@ -54,6 +54,9 @@ $sidebar-transition: .12s;
 
   .sidebar-item-icon {
     margin-right: map-get($spacers, 2);
+    .bi {
+      vertical-align: middle;
+    }
   }
 
   @include media-breakpoint-up(md) {
